Removed from CVS, until it gets more usable.
* plug-ins/common/spheredesigner.c: Removed from CVS, until
it gets more usable.


Former-commit-id: ea7d01dd2191edaf71c480d49716ec3cab468f5d

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-15  Vidar Madsen  <vidar@gimp.org>
+
+	* plug-ins/common/spheredesigner.c: Removed from CVS, until
+	it gets more usable.
+
 2000-12-15  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/convmatrix.c: Fixed the unuseable PDB-interface
