--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-16  Seth Burgess <sjburges@gimp.org>
+	
+	* plug-ins/common/colortoalpha.c: Change to accecpt RGB input 
+	(automatically add an alpha channel if needed).
+
 2000-12-16  Sven Neumann  <sven@gimp.org>
 	    Jens Lautenbacher <jtl@gimp.org>
 
