images/Makefile.am images/anchor_layer_icon.png
2000-12-17  Michael Natterer  <mitch@gimp.org>

	* images/Makefile.am
	* images/anchor_layer_icon.png
	* images/lower_layer_icon.png
	* images/raise_layer_icon.png: removed.

	* images/anchor_icon.png
	* images/lower_icon.png
	* images/raise_icon.png: added.

	This breaks the links to these files temporarily until I checkin
	the HTML files later today.


Former-commit-id: 9035daf3c3f15ba1e5b1b9704e9d4d88f6b1b0b7

--- a/help/ChangeLog
+++ b/help/ChangeLog
@@ -1,3 +1,17 @@
+2000-12-17  Michael Natterer  <mitch@gimp.org>
+
+	* images/Makefile.am
+	* images/anchor_layer_icon.png
+	* images/lower_layer_icon.png
+	* images/raise_layer_icon.png: removed.
+
+	* images/anchor_icon.png
+	* images/lower_icon.png
+	* images/raise_icon.png: added.
+
+	This breaks the links to these files temporarily until I checkin
+	the HTML files later today.
+
 2000-12-15  Michael Natterer  <mitch@gimp.org>
 
 	* makedummyhelpfile.sh
