More cleanup, sync'ed Makefile.am again.
2000-12-17  Michael Natterer  <mitch@gimp.org>

	* images/*: More cleanup, sync'ed Makefile.am again.


Former-commit-id: 323216b785751ec9b59fd77fad4ad9a60a454797

--- a/help/ChangeLog
+++ b/help/ChangeLog
@@ -1,5 +1,9 @@
 2000-12-17  Michael Natterer  <mitch@gimp.org>
 
+	* images/*: More cleanup, sync'ed Makefile.am again.
+
+2000-12-17  Michael Natterer  <mitch@gimp.org>
+
 	* images/*: flattened all PNGs against a white background (because
 	transparent PNG viewing is broken in GtkXmHTML) and crop all GIFs
 	(because they were too large).
