--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+2000-12-17  Tor Lillqvist  <tml@iki.fi>
+
+	* config.h.win32: Typo.
+	Use GLib random functions.
+
+	* plug-ins/makefile.mingw.in (COMMON): Add gee_zoom.
+
+	* plug-ins/common/animationplay.c: Win32-specific #include and
+	#define stuff not needed any longer.
+
+	* plug-ins/FractalExplorer/FractalExplorer.c
+	* plug-ins/common/gz.c
+	* plug-ins/common/hrz.c: No use trying to use G_OS_WIN32 to decide
+	whether to include glib.h, as glib.h is where G_OS_WIN32 gets
+	defined...
+
+	* plug-ins/common/gee.c: Can't use "environ" as variable name,
+	it's in the C library.h on various systems. Use the name "env"
+	instead.
+
 2000-12-17  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/FractalExplorer/FractalExplorer.c
