Using "env" instead of "environ" caused a clash. Changed the other one to
2000-12-18  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/gee.c: Using "env" instead of "environ" caused
	a clash. Changed the other one to "environment".


Former-commit-id: 333bfaf5b6f6f3bae6f4d59831e7e84dba00cff4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-18  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/gee.c: Using "env" instead of "environ" caused
+	a clash. Changed the other one to "environment".
+
 2000-12-17  Tor Lillqvist  <tml@iki.fi>
 
 	* config.h.win32: Typo.
